--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
       "email": "olegmarko7@gmail.com"
     }
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "require": {},
   "autoload": {
     "psr-4": {
